# vatspy-geojson-converter

./: .gitignore  Cargo.toml  LICENSE  README.md  release.toml
.github/workflows/: release.yml
src/: cli.rs  error_collector.rs  fir_boundaries.rs  geo_json.rs  main.rs
