[package]
name = "geo_converter"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indexmap = { version = "1.7.0", features = ["serde"] }
itertools = "0.10.1"
rust_decimal = "1.15.0"
rust_decimal_macros = "1.15.0"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.67"
