[package]
name = "vatspy_geojson_converter"
authors = ["Roald <meltinglavaoutland@gmail.com>"]
description = """
A tool for validating and converting FIRBoundaries.dat and geojson file for vatspy.
"""
version = "0.1.1"
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0.0-beta.4", features = ["derive"] }
color-eyre = { version = "0.5.11", default-features = false }
either = "1.6.1"
indexmap = { version = "1.7.0", features = ["serde"] }
itertools = "0.10.1"
rust_decimal = "1.15.0"
rust_decimal_macros = "1.15.0"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.67"
thiserror = "1.0.29"
